adressing comments from review
