# cineast-api/src/main/java/org/vitrivr/cineast/api/rest/handlers/actions/bool/CountRowsGetHandler.java
@@ -7,29 +7,30 @@ import io.javalin.plugin.openapi.dsl.OpenApiBuilder;
 import io.javalin.plugin.openapi.dsl.OpenApiDocumentation;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.vitrivr.cineast.api.messages.general.IntegerMessage;
 import org.vitrivr.cineast.api.rest.handlers.interfaces.GetRestHandler;
 import org.vitrivr.cineast.standalone.config.Config;
 
-public class CountRowsGetHandler implements GetRestHandler<Integer> {
+public class CountRowsGetHandler implements GetRestHandler<IntegerMessage> {
 
   public static final String ROUTE = "count/table/{" + TABLE_NAME + "}";
 
   private static final Logger LOGGER = LogManager.getLogger(CountRowsGetHandler.class);
 
   @Override
-  public Integer doGet(Context ctx) {
+  public IntegerMessage doGet(Context ctx) {
     try (final var selector = Config.sharedConfig().getDatabase().getSelectorSupplier().get()) {
       var tableName = ctx.pathParam(TABLE_NAME);
       selector.open(tableName);
       var count = selector.rowCount();
       LOGGER.trace("counted {} objects in table {}", count, tableName);
-      return count;
+      return new IntegerMessage(count);
     }
   }
 
   @Override
-  public Class<Integer> outClass() {
-    return Integer.class;
+  public Class<IntegerMessage> outClass() {
+    return IntegerMessage.class;
   }
 
   @Override
